[package]
name = "rsomics-stats"
version = "0.2.0"
description = "Statistical tests, FDR control, p-value combination for the rsomics-* tool family. Layer A primitive."
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science"]
keywords = ["statistics", "bioinformatics", "fdr", "t-test", "mann-whitney"]

[dependencies]
rsomics-common = { version = "0.6" }
statrs = "0.18"
thiserror = "2"

